Реализация IoC контейнера